--- a/listHTML/index.html
+++ b/listHTML/index.html
@@ -6,13 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <ol>
+    <ol type="">
       <li>Apple</li>
       <li>Oranges</li>
       <li>Mango</li>
     </ol>
 
     <hr />
+
+    <!-- hello -->
 
     <ul>
       <li>potato</li>
