--- a/Links/basic.html
+++ b/Links/basic.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello</title>
+    <title>Document</title>
 </head>
 <body>
-    this is my first web page
+    <div>
+        <label for="resume" Resume: ""> </label>
+    </div>
 </body>
 </html>
