--- a/basicHTML/Tables/Task7.html
+++ b/basicHTML/Tables/Task7.html
@@ -1,78 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <table border = "1" cellspacing="2" cellpadding="5">
-        <tr>
-            <td colspan="2"></td>
-            <td colspan="2"></td>
-            <td colspan="3">Morning</td>
-            <td>lunch</td>
-            <td colspan="5">afternoon</td>
-            <td colspan="3">evening</td>
-        </tr>
-        <tr>
-            <td colspan="2"></td>
-            <td colspan="2"></td>
-            <td>9-10 am</td>
-            <td>10-11 am</td>
-            <td>11-12 am</td>
-            <td>1-2 pm</td>
-            <td>2-3 pm</td>
-            <td>3-4 pm</td>
-            <td>4-5 pm</td>
-            <td colspan="2">5-6 pm</td>
-            <td>6-7 pm</td>
-            <td>7-8 pm</td>
-            <td>8-9 pm</td>
-        </tr>
-        <tr>
-            <td colspan="2" rowspan="3">Work</td>
-            <td colspan="2" rowspan="2">Monday</td>
-            <td colspan="3" rowspan="2">Development meeting</td>
-            <td rowspan="2"></td>
-            <td colspan="3" rowspan="2">Client Meeting</td>
-            <td colspan="2" rowspan="2">commute</td>
-            <td colspan="3" rowspan="2">Free</td>
-        </tr>
-        <tr></tr>
-        <tr>
-            <td colspan="2">Tuesday</td>
-            <td colspan="3">in Office</td>
-            <td></td>
-            <td colspan="8">in Office</td>
-        </tr>
-        <tr>
-            <td colspan="2" rowspan="5">Lecture</td>
-            <td colspan="2">Wednesday</td>
-            <td colspan="3">CSC205</td>
-            <td></td>
-            <td colspan="8">preparation</td>
-            
-        </tr>
-        <tr></tr>
-        <tr>
-            <td colspan="2" rowspan="3">Thursday</td>
-            <td colspan="3" rowspan="3">MAM200</td>
-            <td rowspan="3"></td>
-            <td colspan="3" rowspan="3">Tutorials for MAM200</td>
-            <td colspan="5" rowspan="3">Free</td>
-        </tr>
-        <tr>
-        </tr>
-        <tr></tr>
-        <tr>
-            <td colspan="2">Research</td>
-            <td colspan="2">Friday</td>
-            <td colspan="3">Research</td>
-            <td></td>
-            <td colspan="8">Research</td>
-            
-        </tr>
+  </head>
+  <body>
+    <table border="1" cellspacing="2" cellpadding="5">
+      <tr>
+        <td></td>
+        <td></td>
+        <td colspan="3">Morning</td>
+        <td>lunch</td>
+        <td colspan="4">afternoon</td>
+        <td colspan="3">evening</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td width="20px">9-10 am</td>
+        <td width="20px">10-11 am</td>
+        <td width="20px">11-12 am</td>
+        <td width="40px">1-2 pm</td>
+        <td width="20px">2-3 pm</td>
+        <td width="20px">3-4 pm</td>
+        <td width="20px">4-5 pm</td>
+        <td >5-6 pm</td>
+        <td width="20px">6-7 pm</td>
+        <td width="20px">7-8 pm</td>
+        <td width="20px">8-9 pm</td>
+      </tr>
+      <tr>
+        <td rowspan="2">Work</td>
+        <td>Monday</td>
+        <td colspan="3">Development meeting</td>
+        <td></td>
+        <td colspan="3">Client Meeting</td>
+        <td>commute</td>
+        <td colspan="3">Free</td>
+      </tr>
+
+      <tr>
+        <td>Tuesday</td>
+        <td colspan="3">in Office</td>
+        <td></td>
+        <td colspan="7">in Office</td>
+      </tr>
+      <tr>
+        <td rowspan="2">Lecture</td>
+        <td>Wednesday</td>
+        <td colspan="3">CSC205</td>
+        <td></td>
+        <td colspan="7">preparation</td>
+      </tr>
+
+      <tr>
+        <td>Thursday</td>
+        <td colspan="3">MAM200</td>
+        <td></td>
+        <td colspan="3">Tutorials <br> for <br> MAM200</td>
+        <td colspan="5">Free</td>
+      </tr>
+
+      <tr>
+        <td>Research</td>
+        <td>Friday</td>
+        <td colspan="3">Research</td>
+        <td></td>
+        <td colspan="7">Research</td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
