--- a/CSS/Assignment/Portfolio/index2.html
+++ b/CSS/Assignment/Portfolio/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
   </head>
   <body>
     <div id="main">
@@ -36,28 +36,267 @@
             where creativity meets functionality.
           </p>
 
-          <div>Your Email</div>
-          <div>
-            <input
-              type="email"
-              name=""
-              value=""
-              placeholder="Enter your email"
-            />
+          <div>Your email</div>
+          <div id="email">
+            <input type="email" name="email" placeholder="Enter your email" />
+            <button>REQUIRE OFFER</button>
           </div>
-          <span>REQUIRE OFFER</span>
-          <div>
-            Read my <u>Terms and Conditions</u>
 
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam,
-            pariatur. Sit voluptate obcaecati doloremque! Vero saepe unde
-            similique eos officia suscipit, velit molestiae. Repudiandae
-            distinctio ex fuga odio possimus perferendis.</h1>
-          </div>
+          <div id="terms">Read my <u>Terms and Conditions</u></div>
         </div>
         <div>
-          <img src="../Portfolio/omkiPic.jpg" alt="" />
+          <img src="../Portfolio/asserts/omkiPic.jpg" alt="" />
         </div>
+      </div>
+      <div class="smallText">My awesome clients</div>
+      <div id="companies">
+        <img src="../Portfolio/asserts/logo-coinbase.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-spotify.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-pinterest.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-google.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-amazon.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-netflix.svg" alt="" />
+      </div>
+      <div class="smallText">MY SKILLS</div>
+      <div>
+        <h1>What I do</h1>
+      </div>
+      <div id="description">
+        I'm not just a developer; I'm a digital dreamweaver. Crafting immersive
+        online experiences is not just a job but my calling. Discover below how
+        I can help you.
+      </div>
+      <div id="mySkills">
+        <div class="skills">
+          <div><img src="" alt="" /></div>
+          <div><h2>Frontend Web Development</h2></div>
+          <div>
+            <p>
+              Creating beautiful and functional web experiences is my forte.
+              Using the latest technologies and best practices, I design and
+              build websites that captivate and engage users.
+            </p>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div><img src="" alt="" /></div>
+          <div><h2>Mobile App Development</h2></div>
+          <div>
+            <p>
+              I specialize in creating responsive and intuitive mobile apps that
+              work seamlessly across iOS & Android devices. From concept to
+              deployment, I handle every stage of the development process.
+            </p>
+          </div>
+        </div>
+
+        <div class="skills">
+          <div><img src="" alt="" /></div>
+          <div><h2>Technology Stack</h2></div>
+          <div>
+            <p>
+              I'm well-versed in the industry's most popular frontend
+              technologies, including HTML5, CSS3, JavaScript, and frameworks
+              like React and React Native.
+            </p>
+          </div>
+        </div>
+        <div class="skills">
+          <div><img src="" alt="" /></div>
+          <div><h2>Web Optimization</h2></div>
+          <div>
+            <p>
+              Performance matters. I optimize websites and apps for speed,
+              ensuring your users enjoy a fast and responsive experience, which
+              in turn boosts user satisfaction and SEO rankings.
+            </p>
+          </div>
+        </div>
+        <div class="skills">
+          <div><img src="" alt="" /></div>
+          <div><h2>User-Centric Design</h2></div>
+          <div>
+            <p>
+              My development goes hand-in-hand with an eye for design. I create
+              user interfaces that are not only functional but also
+              aesthetically pleasing, providing a seamless and enjoyable user
+              journey.
+            </p>
+          </div>
+        </div>
+        <div class="skills">
+          <div><img src="" alt="" /></div>
+          <div><h2>Testing and Quality Assurance</h2></div>
+          <div>
+            <p>
+              I rigorously test and debug applications to guarantee a bug-free
+              and secure environment for users. Your peace of mind is as
+              important to me as the functionality of your project.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div><h1>My Projects</h1></div>
+      <div class="description">
+        Whether you have a mobile app idea that needs to come to life or a
+        website that requires a facelift, I'm here to turn your digital dreams
+        into reality.
+      </div>
+
+      <div id="projectBody">
+        <div class="project">
+          <img src="../Portfolio/asserts/blog-1.svg" alt="" />
+          <div><a href="">Mobile App Development</a></div>
+          <p>
+            Mobile app designed to help users discover and explore local
+            restaurants and cuisines.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+        <div class="project">
+          <img src="../Portfolio/asserts/blog2.svg" alt="" />
+          <div><a href="">Landing Page Development</a></div>
+          <p>
+            Mobile app designed to help users discover and explore local
+            restaurants and cuisines.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+        <div class="project">
+          <img src="../Portfolio/asserts/blog3.svg" alt="" />
+          <div><a href="">Mobile App Development</a></div>
+          <p>
+            Mobile app designed to help users discover and explore local
+            restaurants and cuisines.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+        <div class="project">
+          <img src="../Portfolio/asserts/blog4.svg" alt="" />
+          <div><a href="">E-commerce development</a></div>
+          <p>
+            Ecommerce website offering access to the latest and greatest gadgets
+            and accessories.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+
+        <div class="project">
+          <img src="../Portfolio/asserts/blog-1.svg" alt="" />
+          <div><a href="">Mobile App Development</a></div>
+          <p>
+            Mobile app designed to help users discover and explore local
+            restaurants and cuisines.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+        <div class="project">
+          <img src="../Portfolio/asserts/blog2.svg" alt="" />
+          <div><a href="">Landing Page Development</a></div>
+          <p>
+            Mobile app designed to help users discover and explore local
+            restaurants and cuisines.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+        <div class="project">
+          <img src="../Portfolio/asserts/blog3.svg" alt="" />
+          <div><a href="">Mobile App Development</a></div>
+          <p>
+            Mobile app designed to help users discover and explore local
+            restaurants and cuisines.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+        <div class="project">
+          <img src="../Portfolio/asserts/blog4.svg" alt="" />
+          <div><a href="">E-commerce development</a></div>
+          <p>
+            Ecommerce website offering access to the latest and greatest gadgets
+            and accessories.
+          </p>
+          <button>SEE DETAILS</button>
+        </div>
+      </div>
+
+      <div id="resume">
+        <div>
+          <h1 id="myResume">My Resume</h1>
+          <p>
+            Highly skilled and creative Web Developer with 5+ years of
+            experience in crafting visually stunning and functionally robust
+            websites and web applications.
+          </p>
+          <button>VIEW MORE</button>
+        </div>
+        <div id="degree">
+          <div>
+            <label for=""></label>
+            <span>Bachelor of Science in Computer Science</span>
+          </div>
+          <div>
+            <label for=""></label>
+            <span>Certified Web Developer</span>
+          </div>
+          <div>
+            <label for=""></label>
+            <span>Frontend Framework Proficiency Certification</span>
+          </div>
+        </div>
+      </div>
+      <div><h1>What Clients Say</h1></div>
+      <div class="description">
+        Discover what clients have to say about their experiences working with
+        me. My client's satisfaction is my greatest achievement!
+      </div>
+      <div id="client">
+        <div id="part1">
+          <h2>Mobile App Development</h2>
+          <p>
+            I had the pleasure of working with Lily on a critical web
+            development project, and I can confidently say that their expertise
+            and professionalism exceeded my expectations.
+          </p>
+          <div>Michael - Technical Manager</div>
+          <section>Marketing @ APPLE INC.</section>
+        </div>
+        <div id="part2">
+          <img src="../Portfolio/asserts/omkiPic.jpg" alt="" />
+        </div>
+      </div>
+      <div
+        style="
+          text-align: center;
+          color: rgb(140, 140, 140);
+          margin-top: 200px;
+          margin-bottom: 30px;
+        "
+      >
+        <b>POPULAR CLIENTS</b>
+      </div>
+      <h1>Trusted by over 10,000+ clients</h1>
+      <div id="companies">
+        <img src="../Portfolio/asserts/logo-coinbase.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-spotify.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-pinterest.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-google.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-amazon.svg" alt="" />
+        <img src="../Portfolio/asserts/logo-netflix.svg" alt="" />
+      </div>
+      <div><h1>Contact Us</h1></div>
+      <div 
+        style="
+        font-size: larger;
+        width: 500px;
+        text-align: center;
+        color: rgb(140, 140, 140);
+        margin: 30px auto;
+        
+
+        ">
+        Ready to get started? Feel free to reach out through the contact form,
+        and let's embark on a journey of innovation and success.
       </div>
     </div>
   </body>
