--- a/CSS/Assignment/Portfolio/index2.html
+++ b/CSS/Assignment/Portfolio/index2.html
@@ -68,7 +68,7 @@
       </div>
       <div id="mySkills">
         <div class="skills">
-          <div><img src="" alt="" /></div>
+          <div class="icon2"><img src="../Portfolio/asserts/front.png" alt="" /></div>
           <div><h2>Frontend Web Development</h2></div>
           <div>
             <p>
@@ -80,7 +80,7 @@
         </div>
 
         <div class="skills">
-          <div><img src="" alt="" /></div>
+          <div class="icon2"><img src="../Portfolio/asserts/mobile.png" alt="" /></div>
           <div><h2>Mobile App Development</h2></div>
           <div>
             <p>
@@ -92,7 +92,7 @@
         </div>
 
         <div class="skills">
-          <div><img src="" alt="" /></div>
+          <div class="icon2"><img src="../Portfolio/asserts/stack.png" alt="" /></div>
           <div><h2>Technology Stack</h2></div>
           <div>
             <p>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="skills">
-          <div><img src="" alt="" /></div>
+          <div class="icon2"><img src="../Portfolio/asserts/optimization.png" alt="" /></div>
           <div><h2>Web Optimization</h2></div>
           <div>
             <p>
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="skills">
-          <div><img src="" alt="" /></div>
+          <div class="icon2"><img src="../Portfolio/asserts/user.png" alt="" /></div>
           <div><h2>User-Centric Design</h2></div>
           <div>
             <p>
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="skills">
-          <div><img src="" alt="" /></div>
+          <div class="icon2"><img src="../Portfolio/asserts/testing.png" alt="" /></div>
           <div><h2>Testing and Quality Assurance</h2></div>
           <div>
             <p>
@@ -232,15 +232,15 @@
         </div>
         <div id="degree">
           <div>
-            <label for=""></label>
+            <footer><img src="../Portfolio/asserts/B.tech.png" alt=""></footer>
             <span>Bachelor of Science in Computer Science</span>
           </div>
           <div>
-            <label for=""></label>
+            <footer><img src="../Portfolio/asserts/Web.png" alt=""></footer>
             <span>Certified Web Developer</span>
           </div>
           <div>
-            <label for=""></label>
+            <footer><img src="../Portfolio/asserts/Frontend.png" alt=""></footer>
             <span>Frontend Framework Proficiency Certification</span>
           </div>
         </div>
