--- a/BootStrap/basics/index.html
+++ b/BootStrap/basics/index.html
@@ -10,25 +10,30 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="bg-light text-body">Hello World</div>
     <br />
-    <button class="btn btn-outline-success d-flex justify-content-center align-items-center gap-2" ><i class="bi bi-check2-circle"></i><span>SUBMIT</span></button>
-    <br>
-    <div class="container border rounded border-dark shadow py-3"  id="abc" >
-      This is a ligic form
+    <button
+      class="btn btn-outline-success d-flex justify-content-center align-items-center gap-2">
+      <i class="bi bi-check2-circle"></i><span>SUBMIT</span>
+    </button>
+    <br />
+    <div class="container border rounded border-dark shadow py-3" id="abc">
+      This is a logic form
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit aperiam
         minima repellat consectetur iusto perspiciatis reiciendis recusandae
         blanditiis, non id esse dignissimos nemo laborum porro, quis omnis minus
         assumenda exercitationem?
       </p>
-      <input type="text" class="container">
+      <input type="text" class="container" />
     </div>
-    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
