--- a/BootStrap/Assignment/Task2/index.html
+++ b/BootStrap/Assignment/Task2/index.html
@@ -10,105 +10,235 @@
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="d-flex">
       <div id="part1" class="p-3 text-white">
-        <div>
-          <img
-            src="../Task2/omkiPic.jpg"
-            alt=""
-            class="rounded-circle border border-3 border-black"
-          />
+        <div id="photo">
+          <div>
+            <img
+              src="../Task2/omkiPic.jpg"
+              alt=""
+              class="rounded-circle border border-3 border-black"
+            />
+          </div>
+          <div class="text-white text-center"><h2>Om Dwivedi</h2></div>
+          <div class="text-warning text-center"><p>SOFTWARE ENGINEER</p></div>
+          <hr />
         </div>
-        <div class="text-white text-center"><h2>Om Dwivedi</h2></div>
-        <div class="text-warning text-center"><p>SOFTWARE ENGINEER</p></div>
-        <hr />
-        <div id="contactInfo">
-          <div class="heading">CONTACT INFO</div>
-          <div class="details">
-            <label for=""><i class="bi bi-telephone-fill"></i></label>
+        <div id="contact" class="fs-6 mt-4">
+          <div><h5>CONTACT INFO</h5></div>
+          <div class="mt-3">
+            <label><i class="bi bi-telephone-fill"></i></label>
             <span><a href="tel:+919229786134">+91229786134</a></span>
           </div>
-          <div class="details">
-            <label for=""></label>
+          <div>
+            <label><i class="bi bi-envelope"></i></label>
             <span
               ><a href="mailto:dwivediom2005@gmail.com"
-                >dwivediom2005@gmail.com</a
+                >dwivediom@gmail.com</a
               ></span
             >
           </div>
-          <div class="details">
-            <label for=""></label>
+          <div>
+            <label><i class="bi bi-github"></i></label>
             <span><a href="https://github.com/Om-Dwivedi2">GitHub</a></span>
           </div>
-          <div class="details">
-            <label for=""></label>
+          <div>
+            <label><i class="bi bi-geo-alt"></i></label>
             <span>Chattrasal Nagar, Bhopal</span>
           </div>
         </div>
 
-        <div id="skills">
-          <div class="heading">SKILLS</div>
-          <div class="details">PYTHON3, DJANGO & FLASK</div>
-          <div class="details">C & C++, JAVA</div>
-          <div class="details">JAVASCRIPT, ANGULAR</div>
-          <div class="details">HTML5 & CSS3</div>
-          <div class="details">SQL, MYSQL</div>
-          <div class="details">GIT & GITHUB</div>
-          <div class="details">LINUX, BASH/SHELL</div>
+        <div class="fs-6 mt-4">
+          <div><h5>SKILLS</h5></div>
+          <div class="mt-3">PYTHON3, DJANGO & FLASK</div>
+          <div>C & C++, JAVA</div>
+          <div>JAVASCRIPT, ANGULAR</div>
+          <div>HTML5 & CSS3</div>
+          <div>SQL, MYSQL</div>
+          <div>GIT & GITHUB</div>
+          <div>LINUX, BASH/SHELL</div>
         </div>
 
-        <div id="reference">
-          <div class="heading">REFERENCES</div>
-          <div class="references">
-            <header></header>
+        <div class="fs-6 mt-4">
+          <div><h5>REFERENCES</h5></div>
+          <div>
+            <header class="text-warning"><h6>Pranay Das</h6></header>
             <div>lorem ipsum dolor.</div>
-            <label for=""></label>
-            <span></span>
-            <label for=""></label>
-            <span></span>
+            <label><i class="bi bi-telephone-fill"></i></label>
+            <span><a href="tel:+919229786134">+91229786134</a></span>
+            <br />
+            <label><i class="bi bi-envelope"></i></label>
+            <span
+              ><a href="mailto:dwivediom2005@gmail.com"
+                >dwivediom@gmail.com</a
+              ></span
+            >
           </div>
-          <div class="references">
-            <header></header>
+          <div>
+            <header class="text-warning"><h6>Raj Vardhan</h6></header>
             <div>lorem ipsum dolor.</div>
-            <label for=""></label>
-            <span></span>
-            <label for=""></label>
-            <span></span>
+            <label><i class="bi bi-telephone-fill"></i></label>
+            <span><a href="tel:+919229786134">+91229786134</a></span>
+            <br />
+            <label><i class="bi bi-envelope"></i></label>
+            <span
+              ><a href="mailto:dwivediom2005@gmail.com"
+                >dwivediom@gmail.com</a
+              ></span
+            >
           </div>
         </div>
       </div>
 
-      <div class="bg-secondary" id="part2">
-        <h1>ABOUT ME</h1>
-        <div id="about">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-            nemo ex tenetur reiciendis id dignissimos? Eligendi nobis nesciunt
-            dolorum enim illo qui, culpa atque et, ad at, eum veritatis commodi?
-          </p>
-        </div>
-        <h1>EXPERIENCE</h1>
+      <div id="part2" style="background-color: #abb1b5;" class="w-100 px-4" >
         <div>
-          <div class="left"></div>
-          <div class="right"></div>
+          <h2 class="mt-4">ABOUT ME</h2>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+              nemo ex tenetur reiciendis id dignissimos? Eligendi nobis nesciunt
+              dolorum enim illo qui, culpa atque et, ad at, eum veritatis
+              commodi? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aperiam sit doloribus voluptates error voluptas in cum facere,
+              accusantium non sint adipisci eligendi consequatur ullam,
+              laboriosam pariatur quidem earum doloremque velit.
+            </p>
+          </div>
         </div>
+        <h2 class="mt-4">EXPERIENCE</h2>
+        <div id="experience">
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>COMPANY ONE</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>POSITION ONE</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>COMPANY TWO</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>POSITION TWO</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>COMPANY THREE</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>POSITION THREE</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
+
         <h1>EDUCATION</h1>
-        <div>
-          <div class="left"></div>
-          <div class="right"></div>
-        </div>
+        <div id="education">
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>UNIVERSITY NAME</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>COMPUTER SCIENCE</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>COLLEGE NAME</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>SCIENCE</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>SCHOOL NAME</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>SCIENCE</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
         <h1>AWARDS & CERTIFICATES</h1>
-        <div>
-          <div class="left"></div>
-          <div class="right"></div>
-        </div>
-      </div>
-
-      <div class="border border-danger w-[300px] h-[300px]">
-          <i class="bi bi-0-square w-100 text-danger"></i>
+        <div id="awards">
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>COMPANY X</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>EMPLOYEE OF THE MONTH</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
+          <div class="d-flex om my-4">
+              <div>
+              <div><h5>CERTIFICATE X</h5></div>
+              <div>2016-2018</div>
+            </div>
+            <div>
+              <div><h5>CERTIFICATE OF COMPLITION</h5></div>
+              <div class="border-start border-secondary border-2 ps-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                reiciendis quibusdam? Ea sit totam fugit, suscipit ratione
+                delectus dolores reprehenderit labore aliquid accusantium
+                similique, nihil corrupti quidem tempore cum architecto?
+              </div>
+            </div>
+          </div>
       </div>
     </div>
 
