--- a/BootStrap/Assignment/Task1/index.html
+++ b/BootStrap/Assignment/Task1/index.html
@@ -12,8 +12,7 @@
     />
     <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-/>
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"/>
 
     <link rel="stylesheet" href="style.css">
   </head>
