--- a/BootStrap/Assignment/portfolio/index.html
+++ b/BootStrap/Assignment/portfolio/index.html
@@ -34,16 +34,11 @@
       </div>
       <div>
         <span>SIGN IN</span>
-        <button
-          class="bg-black text-white p-2 rounded-2 ms-4"
-          style="width: 110px"
-        >
-          BLOCKS
-        </button>
+        <button class="bg-black text-white p-2 rounded-2 ms-4 border-0" style="width: 110px"> BLOCKS </button>
       </div>
     </header>
 
-    <div style="padding: 0px 100px" class="">
+    <div style="padding: 0px 75px" class="">
       <div class="d-flex">
         <div style="width: 800px" class="">
           <h1 class="" style="font-size: 50px">
@@ -61,11 +56,11 @@
             type="email"
             name="email"
             placeholder="Enter your Email"
-            class="rounded-2 border-light my-2"
+            class="rounded-2 my-2 border-black"
             style="height: 45px; width: 300px"
           />
           <button
-            class="bg-black text-center fs-5 rounded-3 text-white ms-4 border-black"
+            class="bg-black text-center fs-5 rounded-3 text-white ms-4 border-0"
             style="height: 45px"
           >
             REQUIRE OFFER
@@ -76,7 +71,7 @@
         <div>
           <img
             style="width: 500px; height: 575px"
-            src="../portfolio/omkiPic.jpg"
+            src="../Task2/Asserts/omkiPic.jpg"
             class="rounded-1"
           />
         </div>
@@ -87,27 +82,27 @@
         <div class="d-flex justify-content-center">
           <img
             style="width: 175px; height: 100px"
-            src="../portfolio/logo-coinbase.svg"
+            src="../Task2/Asserts/logo-coinbase.svg"
           />
           <img
             style="width: 175px; height: 100px"
-            src="../portfolio/logo-spotify.svg"
+            src="../Task2/Asserts/logo-spotify.svg"
           />
           <img
             style="width: 175px; height: 100px"
-            src="../portfolio/logo-pinterest.svg"
+            src="../Task2/Asserts/logo-pinterest.svg"
           />
           <img
             style="width: 175px; height: 100px"
-            src="../portfolio/logo-google.svg"
+            src="../Task2/Asserts/logo-google.svg"
           />
           <img
             style="width: 175px; height: 100px"
-            src="../portfolio/logo-amazon.svg"
+            src="../Task2/Asserts/logo-amazon.svg"
           />
           <img
             style="width: 175px; height: 100px"
-            src="../portfolio/logo-netflix.svg"
+            src="../Task2/Asserts/logo-netflix.svg"
           />
         </div>
       </div>
@@ -230,7 +225,7 @@
 
       <div style="margin: 100px 0px 50px" class="d-flex gap-3">
         <div class="w-25">
-          <div><img src="../portfolio/blog-1.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog-1.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -244,7 +239,7 @@
         </div>
 
         <div class="w-25">
-          <div><img src="../portfolio/blog2.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog2.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -258,7 +253,7 @@
         </div>
 
         <div class="w-25">
-          <div><img src="../portfolio/blog3.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog3.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -272,7 +267,7 @@
         </div>
 
         <div class="w-25">
-          <div><img src="../portfolio/blog4.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog4.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -288,7 +283,7 @@
 
       <div style="margin: 50px 0px 50px" class="d-flex gap-3">
         <div class="w-25">
-          <div><img src="../portfolio/blog-1.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog-1.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -302,7 +297,7 @@
         </div>
 
         <div class="w-25">
-          <div><img src="../portfolio/blog2.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog2.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -316,7 +311,7 @@
         </div>
 
         <div class="w-25">
-          <div><img src="../portfolio/blog3.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog3.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -330,7 +325,7 @@
         </div>
 
         <div class="w-25">
-          <div><img src="../portfolio/blog4.svg" alt="" /></div>
+          <div><img src="../Task2/Asserts/blog4.svg" alt="" /></div>
           <div><h5>Mobile App Development</h5></div>
           <div class="text-secondary my-3">
             Mobile app designed to help users discover and explore local
@@ -406,19 +401,49 @@
         </p>
       </div>
 
-      <div style="gap: 200px;" class="d-flex">
+      <div style="gap: 200px; margin: 150px  100px;" class="d-flex">
         <div style="width: 400px;" class="">
           <h1>Mobile App Development</h1>
           <p class="text-secondary">
-            I had the pleasure of working with Lily on a critical web
+            I had the pleasure of working with Om on a critical web
             development project, and I can confidently say that their expertise
             and professionalism exceeded my expectations.
           </p>
-          <div>Michael - Technical Manager</div>
-          <div class="text-secondary">Marketing @ APPLE INC.</div>
+          <div><b>Sundar Pichai - CEO Google</b></div>
+          <div class="text-secondary">Marketing @ ALPHABET INC.</div>
         </div>
-        <div><img class="rounded-4 w-100" src="../Task2/Asserts/Sundar.webp" alt=""></div>
+        <div><img style="height: 300px; width: 200px;" class="rounded-4 w-100" src="../Task2/Asserts/Sundar.webp" alt=""></div>
       </div>
+
+      <div style="" class="text-center">POPULAR CLIENTS</div>
+      <h1 class="text-center">Trusted by over 10,000+ clients</h1>
+      <div class="d-flex justify-content-center">
+          <img
+            style="width: 175px; height: 100px"
+            src="../Task2/Asserts/logo-coinbase.svg"
+          />
+          <img
+            style="width: 175px; height: 100px"
+            src="../Task2/Asserts/logo-spotify.svg"
+          />
+          <img
+            style="width: 175px; height: 100px"
+            src="../Task2/Asserts/logo-pinterest.svg"
+          />
+          <img
+            style="width: 175px; height: 100px"
+            src="../Task2/Asserts/logo-google.svg"
+          />
+          <img
+            style="width: 175px; height: 100px"
+            src="../Task2/Asserts/logo-amazon.svg"
+          />
+          <img
+            style="width: 175px; height: 100px"
+            src="../Task2/Asserts/logo-netflix.svg"
+          />
+        </div>
+
     </div>
 
     <script
